pixels dont wrap correctly, they spill over and get cut off at the end instead of being a operfect square

--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,9 @@
 }
 
 .grid-item {
-    /* min-width: 6%; */
-    margin: 0;
-    flex: 1 0 auto;
-    height: auto;
+    /* height: auto;S */
+    /* min-height: 6%; */
+    /* min-width: fit-content; */
+    min-height: fit-content;
+    flex: 0 1 auto;
 }
